# funcprog

1/: README.txt  hw1.cabal
1/src/: TicTacToe.lhs
1/test/: TicTacToeSpec.hs
2/src/: Monoids.lhs
2/test/: MonoidSpec.hs
3/: README.txt  hw3.cabal
3/src/: Foldables.lhs
3/test/: FoldableSpec.hs
Project/: .connectfour.cabal.swp  .ghc.environment.x86_64-linux-8.6.5  connectfour.cabal
Project/src/: Connect_four.lhs  Main.hs
